kubernetes/namemaster-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: namemaster
  namespace: gitlab-runner
  labels:
    app.kubernetes.io/name: namemaster
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: namemaster
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: namemaster
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: namemaster
          image: daniil3680/namemaster:0.0.1-RC7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: namemaster
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
